# SmartXbar

./: .gitignore  CMakeLists.smartx.txt  CMakeLists.smartx_internal.txt  CMakeLists.src_delivery.txt  CMakeLists.txt  README.md  SmartXbar.pc.in
android/: AlsaHandlerTest.mk  Android.mk  AudioModules.mk  BufferTaskTest.mk  FilterCoverageTest.mk  FilterTest.mk  IasAudioStreamTest.mk  ModelTest.mk  PipelineTest.mk  PluginTest.mk  PluginUseCasesTest.mk  RampTest.mk  RoutingZoneTest.mk  RtProcessingFwIntegrationTest.mk  SmartDummyConnectionsTest.mk  SmartX.mk  SmartXApiTest.mk  SwitchMatrixJobTest.mk  SwitchMatrixTest.mk  VolumeLoudnessCoreTest.mk  VolumeLoudnessSDVTest.mk  VolumeTest.mk  Year2038Test.mk  version.h
android/res/: smartx_config.txt
private/apps/alsa_capture_example/: CMakeLists.txt
private/apps/alsa_capture_example/src/: alsa_capture_example.cpp
private/apps/alsa_playback_example/: CMakeLists.txt
private/apps/alsa_playback_example/src/: alsa_playback_example.cpp
private/apps/simplemixer_testapp/: CMakeLists.txt
private/apps/simplemixer_testapp/src/: IasSimpleMixerTestApp.cpp
private/apps/smartx_interactive_example/: CMakeLists.txt
private/apps/smartx_interactive_example/src/: smartx_interactive_example.cpp
private/doc/: 01_OverviewJacklessDaemon.md  10_RequirementsSmartX.md  11_RequirementsAlsaPlugin.md  12_Requirements_RingBuffer.md  20_DesignJacklessDaemon.md  80_OpenPoints.md  99_Glossary.md
private/doc/images/: ClassesBuffer.vsdx  ClassesClocking.vsdx  ClassesSetupAPI.vsdx  HighLevel.vsdx  MSC.vsdx  PossibleSetups.vsdx  ProcessingModules.vsdx  RoutingZone.vsdx  ShmConnectConcept.vsdx  SourceGroups.vsdx  SwitchMatrix.vsdx  TestFramework.vsdx
private/inc/alsahandler/: IasAlsaHandler.hpp  IasAlsaHandlerWorkerThread.hpp
private/inc/configparser/: IasConfigParser.hpp  IasConfigPipeline.hpp  IasConfigProcessingModule.hpp  IasConfigSinkDevice.hpp  IasConfigSourceDevice.hpp  IasParseHelper.hpp  IasSmartXTypeConversion.hpp
private/inc/diagnostic/: IasDiagnostic.hpp  IasDiagnosticLogWriter.hpp  IasDiagnosticStream.hpp
private/inc/equalizer/: IasEqualizerCmdInterface.hpp  IasEqualizerConfiguration.hpp  IasEqualizerCore.hpp
private/inc/filter/: IasAudioFilter.hpp  IasAudioFilterCallback.hpp
private/inc/helper/: IasRamp.hpp  version.h.in
private/inc/mixer/: IasMixerCmdInterface.hpp  IasMixerCore.hpp  IasMixerElementary.hpp
private/inc/model/: IasAudioDevice.hpp  IasAudioPin.hpp  IasAudioPort.hpp  IasAudioPortOwner.hpp  IasAudioSinkDevice.hpp  IasAudioSourceDevice.hpp  IasPipeline.hpp  IasProcessingModule.hpp  IasRoutingZone.hpp  IasRoutingZoneWorkerThread.hpp
private/inc/rtprocessingfwx/: IasAudioBuffer.hpp  IasAudioBufferPool.hpp  IasAudioBufferPoolHandler.hpp  IasAudioChain.hpp  IasAudioChainEnvironment.hpp  IasAudioChannelBundle.hpp  IasBundleAssignment.hpp  IasBundleSequencer.hpp  IasCmdDispatcher.hpp  IasGenericAudioCompConfig.hpp  IasPluginEngine.hpp  IasStreamParams.hpp
private/inc/smartx/: IasAudioTypedefs.hpp  IasConfigFile.hpp  IasConfiguration.hpp  IasDebugImpl.hpp  IasDebugMutexDecorator.hpp  IasDecoratorGuard.hpp  IasProcessingImpl.hpp  IasProcessingMutexDecorator.hpp  IasRoutingImpl.hpp  IasRoutingMutexDecorator.hpp  IasSetupImpl.hpp  IasSetupMutexDecorator.hpp  IasSmartXClient.hpp  IasSmartXPriv.hpp  IasThreadNames.hpp
private/inc/switchmatrix/: IasBufferTask.hpp  IasSwitchMatrix.hpp  IasSwitchMatrixJob.hpp
private/inc/testfwx/: IasTestFrameworkConfiguration.hpp  IasTestFrameworkPriv.hpp  IasTestFrameworkRoutingZone.hpp  IasTestFrameworkSetupImpl.hpp  IasTestFrameworkTypes.hpp  IasTestFrameworkWaveFile.hpp
private/inc/volume/: IasVolumeCmdInterface.hpp  IasVolumeHelper.hpp  IasVolumeLoudnessCore.hpp
private/res/: CMakeLists.txt
private/src/alsahandler/: IasAlsaHandler.cpp  IasAlsaHandlerWorkerThread.cpp
private/src/configparser/: IasConfigParser.cpp  IasConfigPipeline.cpp  IasConfigProcessingModule.cpp  IasConfigSinkDevice.cpp  IasConfigSourceDevice.cpp  IasParseHelper.cpp  IasSmartXDebugFacade.cpp  IasSmartXTypeConversion.cpp  IasSmartXconfigParser.cpp
private/src/diagnostic/: IasDiagnostic.cpp  IasDiagnosticLogWriter.cpp  IasDiagnosticStream.cpp
private/src/equalizer/: IasEqualizerCmdInterface.cpp  IasEqualizerConfiguration.cpp  IasEqualizerCore.cpp
private/src/filter/: IasAudioFilter.cpp  IasAudioFilterCallback.cpp
private/src/helper/: IasRamp.cpp
private/src/mixer/: IasMixerCmdInterface.cpp  IasMixerCore.cpp  IasMixerElementary.cpp
private/src/model/: IasAudioDevice.cpp  IasAudioPin.cpp  IasAudioPort.cpp  IasAudioSinkDevice.cpp  IasAudioSourceDevice.cpp  IasPipeline.cpp  IasProcessingModule.cpp  IasRoutingZone.cpp  IasRoutingZoneWorkerThread.cpp
private/src/module_library/: IasModuleLibrary.cpp
private/src/tools/vads/: CMakeLists.txt  DevManager.cpp  DevManager.hpp  IDev.cpp  IDev.hpp  IasRingBufferTestReader.cpp  IasRingBufferTestReader.hpp  IasRingBufferTestWriter.cpp  IasRingBufferTestWriter.hpp  Sink.cpp  Sink.hpp  Source.cpp  Source.hpp  Timer.hpp  Timing.cpp  Timing.hpp  default.xml  main.cpp
private/src/tools/vads/doc/: Virtual_ALSA_Device_Simulator(VADS).docx  vads.vsdx
private/tst/plugin_use_cases_tst/: CMakeLists.txt
private/tst/plugin_use_cases_tst/res/: smartx_config.txt
private/tst/plugin_use_cases_tst/src/: IasAlsaPluginUseCasesTest.cpp
private/tst/rtc_248800/: CMakeLists.txt
private/tst/rtc_248800/src/: rtc_248800.cpp
private/tst/smartx_api_mutex/: CMakeLists.txt
private/tst/smartx_api_mutex/src/: IasSmartX_API_Mutex_Test.cpp
public/doc/: 01_icd.md  02_changes.md  51_configuration.md  61_analysis.md  Parser_2_7.py  audio_domain_model_processing.md  audio_domain_model_routing.md  config.txt  cuc_interfaces.md  datasheet_equalizer_car.md  datasheet_equalizer_user.md  datasheet_mixer.md  datasheet_smartXConfigParser.md  datasheet_volume_loudness.md  intel_processing_modules.md  latency.md  special_features.md  streaming_if.md  switch_matrix.md  testing_processing_modules.md  thread_concept.md  writing_processing_modules.md
public/res/: smartx_config.txt
(+277 files in other folders)
